# ClientServer

client/: .clangd  CMakeLists.txt  client  client.cpp  client_command.cpp  client_command.hpp  client_network.cpp  client_ui.cpp  main.cpp
client/include/: ChatClient.hpp  client_command.hpp  client_network.hpp
client/src/: ChatClient.cpp  client.cpp  client_command.cpp  client_network.cpp  client_ui.cpp
client/ui/: CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  loginwindow.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave
common/: Auth_Data.hpp  json_example.json
server/: CMakeLists.txt  dataBase.cpp  dataBase.hpp  data_base.cpp  data_base.hpp  server  server.cpp
